--- a/style.css
+++ b/style.css
@@ -20,6 +20,10 @@
     z-index: 99;
     display: none;
 }
+.fixed-contact-buttons img {
+    box-shadow: none;
+    filter: none;
+}
 @media (max-width: 768px) {
     .fixed-contact-buttons {
         display: flex;
@@ -48,6 +52,20 @@
 .toggle-checkbox:checked + .toggle-label {
     background-color: #4f46e5;
 }
-.padd{
-    right-padding: 2rem;
+
+.floating-img {
+    animation: float 6s ease-in-out infinite;
+    filter: none;
+}
+
+@keyframes float {
+    0% {
+        transform: translateY(0px);
+    }
+    50% {
+        transform: translateY(-20px);
+    }
+    100% {
+        transform: translateY(0px);
+    }
 }
